--- a/Week02/class/searchterms.yaml
+++ b/Week02/class/searchterms.yaml
@@ -1,7 +1,4 @@
 ---
 apache:
-  php: = "[GET|POST].*/wordpress/wp-login.php.*, [GET|POST].*/mediawiki/index.php.*"
-  cgi: "[GET|POST].*/cgi-bin/test-cgi.*, [GET|POST].*/cgi-bin/htsearch"
----
-main:
-  relay:
+  php: "[GET|POST].*/wordpress/wp-login.php.*,[GET|POST].*/mediawiki/index.php.*"
+  cgi: "[GET|POST].*/cgi-bin/test-cgi.*,[GET|POST].*/cgi-bin/htsearch.*"
